# tree-sitter-norg-meta

./: CHANGELOG.md  Cargo.toml  README.md  binding.gyp  flake.nix  grammar.js  package.json  tree-sitter-norg-meta-scm-1.rockspec
.github/workflows/: luarocks.yml  release-please.yml  tests.yml  tree-sitter-norg-meta.rockspec.template
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: document.meta.txt
