[package]
name = "tree-sitter-norg-meta"
description = "norg-meta grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "norg-meta"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-norg-meta"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.0"

[build-dependencies]
cc = "1.0"
